# hallux

./: .clang-format  .coveragerc  .gitignore  .hallux  CHANGELOG.md  CMakeLists.txt  Dockerfile  IDEAS.md  LICENSE.txt  README.md  action.yml  activate.sh  build.sh  ci-cpp-tests.sh  ci-python-tests.sh  dummy.json  hallux-test.sh  hallux.sh  pyproject.toml  real-openai-test.sh  requirements-ownai.txt  requirements.txt  run-all-tests.sh  run-real-test.sh  run-self-healing.sh  run-tests.sh  run-validity-tests.sh  setup.py  sonar-project.properties  sonar-scanner.sh
.github/workflows/: hallux.yml  main.yml  master.yml  pipeline.yml  pull_request.yml  release.yml
docs/api-reference/tools/: sonarqube.md
docs/dev-guide/: architecture.md  classes.puml  hallux_architecture.md  versioning.md  vs-code.md
docs/user-guide/: configuration.md  debugging.md  installation.md
hallux/: auxilary.py  auxiliary.py  logger.py  main.py  models.py
hallux/backends/: dummy_backend.py  factory.py  litellm.py  openai_backend.py  query_backend.py  rest_backend.py
hallux/issues/: annotations.py  issue.py
hallux/proposals/: diff_proposal.py  proposal_engine.py  python_proposal.py  simple_proposal.py
hallux/targets/: diff.py  filesystem.py  git_commit.py  github_proposal.py  github_suggestion.py  gitlab_suggestion.py
hallux/tools/: factory.py  issue_solver.py
hallux/tools/cpp/: cpp.py  issue.py  make_target_solver.py
hallux/tools/mypy/: solver.py
hallux/tools/python/: python_issue.py
hallux/tools/ruff/: solver.py
hallux/tools/sonarqube/: issue.py  solver.py
ownai/tests/samples/: test2.h  test_incorrect.cpp
python/: ast_node.py  ast_parser.py  ast_train.py  hallux.py
python/AST/: ast_node.py  ast_parser.py
scripts/: build-binary.sh  build-package.sh  pre-push-format.sh  pre-push.sh  run-build.sh  run-format.sh  run-tests.sh  run-tidy.sh  set-version.sh  setup-hooks.sh  setup-python.sh  setup-venv.sh  sonar-scanner.sh  update-changelog.sh
src/: hallux.cpp  hallux.py
src/backends/: dummy_backend.py  factory.py  openai_backend.py  rest_backend.py
src/issues/: issue.py
src/processors/: sonar.py
src/processors/cpp/: make_compile.py
src/processors/python/: mypy.py  python.py
src/targets/: diff_target.py  filesystem_target.py  git_commit_target.py  github_proposal_traget.py
src/tools/: code_processor.py  factory.py  issue_solver.py
src/tools/cpp/: cpp.py  issue.py  make_target_solver.py
src/tools/mypy/: solver.py
src/tools/python/: python.py  python_issue.py
src/tools/ruff/: solver.py
src/tools/sonarqube/: issue.py  solver.py
test/: ast_parser_test.py
test/samples/: test1.cpp
tests/: conftest.py  dummy.json  hallux_fix_test.py  utils.py
tests/integration/: hallux_commit_test.py  hallux_fix_cpp_test.py  hallux_fix_git_test.py  hallux_fix_github_test.py  hallux_fix_python_test.py  hallux_fix_test.py  hallux_git_test.py  hallux_github_test.py  hallux_sonar_test.py
tests/python/: ast_parser_test.py  parse_cpp_tree_test.py
tests/python/AST/: parse_cpp_tree_test.py
tests/query_backend/: test_dummy_backend.py
tests/samples/: test2.cpp  test3_big.cpp
tests/test-cpp-project/: .hallux  .hallux.real  dummy.json
tests/test-cpp-project/cpp/: test_cpp_project.cpp
tests/test-nodejs-project/: package.json
tests/test-nodejs-project/src/: db.json  errors.ts  generate.ts  index.ts
tests/test-project1/: .hallux  dummy.json
tests/test-project1/cpp/: test_cpp_project.cpp
tests/test-project1/python/: parse_cpp_tree_test.py
tests/test-python-project/: .hallux  .hallux.real  dummy.json  pyproject.toml
tests/test-python-project/python/: parse_cpp_tree_test.py
tests/test-rest-backend/: .eslintrc  .hallux  package-lock.json  package.json  tsconfig.json
tests/test-rest-backend/src/: db.json  generate.ts  index.ts
tests/test-swift-project/: file1.swift  sonar.json
tests/test-typescript-project/: .hallux  .hallux.real  package-lock.json  package.json
tests/test-typescript-project/src/: array-callback-return.ts  (+1 more)
tests/unit/: auxilary_test.py  auxiliary_test.py  diff_target_test.py  file_diff_test.py  hallux_test.py  issue_solver_test.py  main_test.py
worker/: config.yaml  main.py  worker.py
(+29 files in other folders)
